terraform/nat.tf
resource "aws_eip" "nat_eip" {

  domain = "vpc"

  tags = merge(
    local.common_tags, {
      Name = "${var.project_name}-nat-eip"
  })

}

resource "aws_nat_gateway" "nat_gateway" {

  allocation_id = aws_eip.nat_eip.id

  subnet_id = aws_subnet.public_subnet_1.id

  tags = merge(
    local.common_tags, {
      Name = "${var.project_name}-nat-gateway"
  })

  depends_on = [
    aws_internet_gateway.igw
  ]
}
